fixes alignment on jobs page

--- a/src/components/CommonButton.module.css
+++ b/src/components/CommonButton.module.css
@@ -8,7 +8,7 @@
     cursor: pointer;
     border: none;
     border-radius: 4px;
-    margin: 10px;
+    margin-top: 10px;
   }
   .Button-small {
     color: #ffffff;
